# sf_auto_tl

./: .env.example  .gitignore  README.md  docker-compose.yml
starfield-api/: Dockerfile  pom.xml
starfield-api/src/main/resources/: application.yml
starfield-api/src/main/resources/db/migration/: V10__translation_cache.sql  V11__cache_add_record_type.sql  V12__translation_confirmation.sql  V1__init.sql  V2__creation.sql  (+7 more)
starfield-api/src/test/resources/: application-test.yml  schema-test.sql
starfield-engine/: Dockerfile  pyproject.toml  requirements.txt
starfield-engine/engine/: __init__.py  app.py  cache_client.py  esm_parser.py  esm_writer.py  llm_client.py  prompt_builder.py  translator.py
starfield-engine/starfield_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
starfield-engine/tests/: esm_test_helpers.py  test_app.py  test_esm_parser.py  test_esm_writer.py  test_llm_client.py  test_prompt_builder.py  test_translator.py
starfield-engine/tools/: scan_subrecords.py
starfield-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
starfield-web/src/: App.vue
starfield-web/src/components/: CacheManager.vue  ConfirmationDrawer.vue  CreationManager.vue  DictionaryManager.vue  FileUpload.vue  PromptEditor.vue  PromptManager.vue  TaskCard.vue  TaskHistory.vue  TaskList.vue
starfield-web/src/composables/: useStarborn.ts
starfield-web/src/services/: api.ts  cacheApi.ts  confirmationApi.ts  creationApi.ts  dictionaryApi.ts  fileApi.ts  promptApi.ts  taskApi.ts
starfield-web/src/types/: index.ts
(+87 files in other folders)
